@@ -56,8 +56,7 @@ if (exists $ENV{VALGRIND})
     $valgrind_execute = $ENV{VALGRIND};
 }
 print STDERR "#executing $libtool_execute $valgrind_execute $server_prog $server_args\n";
-#$server_pid = open(SERVER, "$libtool_execute valgrind --log-file=$ENV{PWD}/valgrind.log $server_prog $server_args |");
-$server_pid = open(SERVER, "$libtool_execute $server_prog $server_args |");
+$server_pid = open(SERVER, "$libtool_execute $valgrind_execute $server_prog $server_args |");
  
 if($server_pid == -1)
 {
