@@ -1,3 +1,9 @@
+globus-dsi-rest (0.32-1+gt6.@distro@) @distro@; urgency=low
+
+  * More test script fixes to use a CA certificate
+
+ -- Globus Toolkit <support@globus.org>  Fri, 19 May 2017 14:16:14 -0400
+
 globus-dsi-rest (0.31-1+gt6.@distro@) @distro@; urgency=low
 
   * Fix test script to work with OpenSSL 1.1.0
